syntax = "proto3";

package api;


message RegisterReq {
	string build_id = 1;
	string privatekey = 2;
}

message RegisterRes {
	bool registered = 1;
}

message UpdateBuildStatusReq {
	string build_id = 1;
	string graph = 2;
	string status = 3;
	string checkpoint = 4;
	string reason = 5;
	string duration = 6;
}

message UpdateBuildStatusRes {
}

message GetProjectReq {
	string build_id = 1;
	bool include_shiftfile = 2;
}

message GetProjectRes {
	string container_id = 1;
	string repository_id = 2;
	string vcs_id = 3;
	string branch = 4;
	string name = 5;
	string clone_url = 6;
	string language = 7;
	string accesstoken = 8;
	string commit_id = 9;
	string storage_path = 10;
	string source = 11;
	string shiftfile = 12;
}

service Shift {

	rpc Register(RegisterReq) returns (RegisterRes){};
	rpc GetProject(GetProjectReq) returns (GetProjectRes){};
	rpc UpdateBuildStatus(UpdateBuildStatusReq) returns (UpdateBuildStatusRes){};
}
